--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,4 @@
-.login {
+.loginBody {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -8,11 +8,11 @@
 
 .cardBody {
     border-radius: 10px;
-    width: 90%;
+    width: 80%;
     height: 80%;
     background: white;
     overflow: hidden;
-    
+
 }
 
 .banner {
@@ -45,4 +45,10 @@
 
 .hide {
     display: none;
+}
+
+@media (min-width: 2560px) {
+    .cardBody {
+        width: 90%;
+    }
 }
