--- a/public/css/form.css
+++ b/public/css/form.css
@@ -77,7 +77,7 @@
 .description input:focus + .label-name .content-name,
 .description input:valid + .label-name .content-name {
   transform: translateY(-100%);
-  color: black;
+  color: #2d62b1;
   font-size: 14px;
 }
 
@@ -126,8 +126,8 @@
   width: 100%;
   height: 100%;
   text-align: left;
-  border-bottom: 1px solid gray;
-  color: gray;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.501);
+  color: rgba(0, 0, 0, 0.501);
   z-index: 1;
   font-weight: 600;
   margin-bottom: 0;
@@ -150,7 +150,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #2d62b1;
   left: 0;
   bottom: -1px;
   transform: translateX(-100%);
@@ -173,5 +173,10 @@
   bottom: 5px;
   left: 0;
   transition: all 0.3s ease;
+}
+
+.submit-btn {
+  background: #2d62b1;
+  border: none;
 }
 
